force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/B25__Dimension_Junction_Display_Setting__c.object-meta.xml
<CustomObject>
    <description>Couples a dimension junction to a reservation type for display purposes. This means that the related list wil be displayed on the reservation form for that reservation type.</description>
    <label>Dimension Junction Display Setting</label>
    <nameField>
        <displayFormat>DJDS-{000}</displayFormat>
        <label>Dimension Junction Display Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dimension Junction Display Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>