force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Collapsed_Field_Set_To_Use__c.field-meta.xml
<CustomField>
    <fullName>B25__Collapsed_Field_Set_To_Use__c</fullName>
    <description>When this related list is shown on the reservation form these fields are added to each row on the related list when the related list record is collapsed.</description>
    <inlineHelpText>When this related list is shown on the reservation form these fields are added to each row on the related list when the related list record is collapsed.</inlineHelpText>
    <label>Collapsed Field Set To Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>