force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Dimension_Junction__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension_Junction__c</fullName>
    <label>Dimension Junction</label>
    <referenceTo>B25__Dimension_Junction__c</referenceTo>
    <relationshipLabel>Dimension Junction Display Settings</relationshipLabel>
    <relationshipName>Dimension_Junction_Display_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>