force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Dimension_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension_Name_Field__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <description>Enter the API name of the field that should be displayed as the name for each item in the list.</description>
    <inlineHelpText>Saisissez le nom API du champ qui doit être affiché comme nom pour chaque élément de la liste.</inlineHelpText>
    <label>Dimension Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>