force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Field_Set_to_use__c.field-meta.xml
<CustomField>
    <fullName>B25__Field_Set_to_use__c</fullName>
    <description>When this related list is shown on the reservation form these fields are added to each row on the related list.
Leave empty to remove the dropdown of related list fields.</description>
    <inlineHelpText>Lorsque cette liste connexe est affichée sur le formulaire de réservation, ces champs sont ajoutés à chaque ligne de la liste connexe. Laissez ce champ vide pour supprimer la liste déroulante des champs de la liste connexe.</inlineHelpText>
    <label>Field Set to use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>