force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Hide_Selected_Items_From_Search_Results__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_Selected_Items_From_Search_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this option is enabled items that have already been selected in the related list wil be hidden
		from the search results when selecting additional items.</description>
    <inlineHelpText>Lorsque cette option est activée, les éléments qui ont déjà été sélectionnés dans la liste connexe seront masqués des résultats de la recherche lors de la sélection d’éléments supplémentaires.</inlineHelpText>
    <label>Hide Selected Items From Search Results</label>
    <type>Checkbox</type>
</CustomField>