force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The label that wil be shown on the header of the section that contains this dimension junction list.
		When left empty the plural label of the dimension object is used.</description>
    <inlineHelpText>Le libellé qui sera affiché dans l’en-tête de la section qui contient cette liste de jonction de dimension. Lorsque ce champs est laissé vide, le libellé pluriel de l’objet de dimension est utilisé.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>