force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>The ordering of the related list on the reservation form. Lower numbers appear at the top.</description>
    <inlineHelpText>L’ordre de la liste connexe sur le formulaire de réservation. Les numéros inférieurs apparaissent en haut.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>