force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <description>The reservation type this junction should be displayed on.</description>
    <inlineHelpText>Le type de réservation sur lequel cette jonction doit être affichée.</inlineHelpText>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Dimension Junction Display Settings</relationshipLabel>
    <relationshipName>Dimension_Junction_Display_Settings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>