force-app/main/default/objects/B25__Dimension_Junction_Display_Setting__c/fields/B25__Use_Bulk_Input__c.field-meta.xml
<CustomField>
    <fullName>B25__Use_Bulk_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can be used to increase performance if junction validation is slow. Allows the user to first select multiple new junctions, and postpones validation until after the user clicks the Add button.</description>
    <inlineHelpText>Peut être utilisée pour augmenter les performances si la validation des jonctions est lente. Permet à l’utilisateur de sélectionner d’abord plusieurs nouvelles jonctions, et reporte la validation jusqu’à ce que l’utilisateur clique sur le bouton « Ajouter ».</inlineHelpText>
    <label>Use Bulk Input</label>
    <type>Checkbox</type>
</CustomField>